content/terraform-cdk/v0.12.x/docs/cdktf/create-and-deploy/environment-variables.mdx
---
page_title: Environment Variables
description: >-
  There are some environment variables that can be used to configure the
  behavior of CDKTF.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-08-28T09:11:58-04:00
# END AUTO GENERATED METADATA
---

# Environment Variables

Use these environment variables to configure CDK for Terraform (CDKTF) behavior.

| Variable Name                  | Description                                                                                                                                                                                                                   | Default                      |
| ------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------- |
| CDKTF_DISABLE_PLUGIN_CACHE_ENV | If set to `true` or `1`, CDKTF disables the [plugin cache](/cli/config/config-file#provider-plugin-cache). Otherwise, CDKTF creates the plugin cache directory in `~/.terraform.d/plugin-cache` if it is not already present. |                              |
| CDKTF_HOME                     | Where CDKTF should store cache and configuration files.                                                                                                                                                                       | `~/.cdktf`                   |
| CDKTF_LOG_FILE_DIRECTORY       | The directory path where CDKTF should create `cdktf.log` and print logs at the `debug` level. If not set, CDKTF writes logs to standard out at the level specified in `CDKTF_LOG_LEVEL`.                                      | standard out                 |
| CDKTF_LOG_LEVEL                | Controls how much log information CDKTF prints to the console. You can set it to one of the following values: `all`, `debug`, `info`, `warn`, `error`, `fatal`, `off`.                                                        | `warn`                       |
| CHECKPOINT_DISABLE             | If set to any value, CDKTF will not send [telemetry](/cdktf/telemetry) data.                                                                                                                                                  |                              |
| DISABLE_VERSION_CHECK          | If set to `true` or `1`, CDKTF will not perform a version check. If it is not set, CDKTF verifies that your installed library version matches the CLI version. If they do not match, CDKTF displays a warning.                |                              |
| FORCE_COLOR                    | If set to `0`, CDKTF disables colored CLI output. Refer to [`chalk` documentation](https://github.com/chalk/chalk#supportscolor) for other supported values.                                                                  |                              |
| HTTP_PROXY or http_proxy       | The proxy that CDKTF should use for all HTTP requests.                                                                                                                                                                        |                              |
| TERRAFORM_BINARY_NAME          | The Terraform binary that CDKTF should use.                                                                                                                                                                                   | The Terraform binary in path |
| TERRAFORM_CLOUD_TOKEN          | The token CDKTF should use to authenticate with Terraform Cloud. Must be set to a valid [Terraform Cloud API token](/cloud-docs/users-teams-organizations/api-tokens).                                                        |                              |
| CI                             | If set to `true` or `1`, CDKTF will run in a non-interactive CI mode.                                                                                                                                                         |                              |
